# key-rotator

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  key-rotator.spec  key_rotator_entry.py  pyproject.toml
.github/workflows/: release.yml
rotator/: cli.py  core.py  notify.py  platform_setup.py  scheduler.py  server.py  vault.py
rotator/providers/: __init__.py  base.py  resend.py  script.py  stripe.py
rotator/static/: index.html  manifest.json  sw.js
rotator/stores/: __init__.py  base.py  dotenv.py  system_env.py  vercel.py
scripts/: cron-fallback.sh
systemd/: key-rotator-web.service  key-rotator.service
